<resources>
    <string name="app_name">WeatherApp</string>
    <string name="query_hint">Search here...</string>

    <!-- Home -->
    <string name="location">Location:</string>
    <string name="country">Country:</string>

    <!-- Detail -->
    <string name="degree">º</string>
    <string name="title_forecast">Next Forecast</string>

    <!-- Preview -->
    <string name="bogota">Bogota</string>
    <string name="colombia">Colombia</string>
    <string name="temperature">23</string>
    <string name="condition">Partly cloudy</string>

</resources>